<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="enter_a_number">Enter a Number</string>
    <string name="enter_a_number1">Enter a Number</string>
    <string name="sym">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="textview">TextView</string>
    <string name="answer">Answer </string>
</resources>