<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F7E58"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:text="Simple Calculator"
        android:textAlignment="center"
        android:textColorLink="#A417DA"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/enter_a_number1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#253332" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:textColorHint="#253332" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:outlineProvider="background">

        <Button
            android:id="@+id/btn_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sym"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sub"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_div"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/div"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>